@@ -1,0 +1,41 @@
+{% extends "texsitebusinesscasual/base.html" %}
+
+{% load i18n %}
+{% load wagtailcore_tags %}
+
+{% block business-casual-body-content %}
+    <div class="box">
+        <hr>
+        <h2 class="intro-text text-center">
+            <strong>{% trans "Password required" %}</strong>
+        </h2>
+        <hr>
+        <form role="form" action="{{ action_url }}" method="POST">
+            {% csrf_token %}
+
+            {% if form.non_field_errors %}
+                <div class="alert alert-danger">
+                    {{ form.non_field_errors }}
+                </div>
+            {% endif %}
+
+            <div class="row">
+                <div class="form-group col-lg-4 col-lg-offset-4 {% if form.password.errors %}has-error{% endif %}">
+                    <label>{% trans "Password" %}</label>
+                    <input type="password" class="form-control" name="password">
+
+                    {% if form.password.errors %}
+                        <span class="help-block">{{ form.password.errors }}</span>
+                    {% endif %}
+                </div>
+                <div class="form-group col-lg-4 col-lg-offset-4">
+                    <button type="submit" class="btn btn-primary">{% trans "Continue" %}</button>
+                </div>
+            </div>
+
+            {% for field in form.hidden_fields %}
+                {{ field }}
+            {% endfor %}
+        </form>
+    </div>
+{% endblock %}
